# Robotized_Objects

./: Bluetooth_App.aia  Door.ino  ID_Change.ino  LICENSE  Model_Scan.ino  README.md  bog_guide1.py  bog_master_0130.py  bookcase_arduino.ino  dynamic_test.ino  master.py  realsense_practice.py  stool_study.py
FlowChart/: adult.eddx  child.eddx
Mini_Stool/Mini_Stool/Mini_Stool/: Mini_Stool.ino
Mini_Stool/Miniature_Stool/: button holder.step  stool cover_wonil 최종본.step  stool support.step  stool(s)_1_6mm.step  stool(s)_2 (18650).step  wheel(servo).step
Stool/: scan_data_filter.yaml  scan_data_filter_degree.yaml  stool.py  test.py  turtlebot3_navigation.launch
bag/: test.bag
catkin_ws1/src/az_body_tracker/: CMakeLists.txt  package.xml
catkin_ws1/src/az_body_tracker/include/: TrackerNode.h
catkin_ws1/src/az_body_tracker/launch/: run.launch
catkin_ws1/src/az_body_tracker/src/: TrackerNode.cpp  az_body_tracker.cpp
catkin_ws1/src/az_body_tracker/window_controller_3d/: CMakeLists.txt
catkin_ws1/src/collabot_ver1/: adult_collabot_ver1.launch  child_collabot_ver1.launch  collabot_ver1.launch  mainpage.dox  manifest.xml
catkin_ws1/src/collabot_ver1/src/: motor_publish_ver1.ino  print_monitor.py  sceinaro_make.py
config/: ROI.json  ac_pub_az_sub.py  motor_publish_ver1.ino
config/motor_publish_ver1/: motor_publish_ver1.ino
utils/: get_ROI.py  monitor.py  ssim_graph.py
utils/ssim/: get_ROI.py  grad_ssim_graph.py  make_sample_video.py  ssim.py  ssim_graph.py  ssim_play.py
utils/ssim_for_real/: get_ROI.py  ssim.py
utils/ssim_for_video/: get_ROI.py  ssim_play.py
